--- a/views/abrochadoras.html
+++ b/views/abrochadoras.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Balance librería</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/productos.css">
+    <link rel="stylesheet" href="../css/horarios.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
@@ -38,7 +40,7 @@
             <h2 class="text-center">Ofertas</h2>
             <div class="imagen-container">
                 <div class="producto">
-                    <h4>kangaro HP-10</h4>
+                    <h4>Kangaro HP-10</h4>
                     <img src="../img/Abrochadora/kangaro HP-10 8400.jpg" alt="Imagen 1">
                     <div class="info-producto">
                         <p class="precio">$8400</p>
