--- a/views/cuadrenillos.html
+++ b/views/cuadrenillos.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Balance librería</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/productos.css">
+    <link rel="stylesheet" href="../css/horarios.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
@@ -38,7 +40,7 @@
             <h2 class="text-center">Ofertas</h2>
             <div class="imagen-container">
                 <div class="producto">
-                    <h4>abc rayado</h4>
+                    <h4>ABC rayado</h4>
                     <img src="../img/Cuadrenillos/abc 4650.png" alt="Imagen 1">
                     <div class="info-producto">
                         <p class="precio">$4650</p>
@@ -62,7 +64,7 @@
                     </div>
                 </div>
                 <div class="producto">
-                    <h4>tapa dura</h4>
+                    <h4>Tapa dura</h4>
                     <img src="../img/Cuadrenillos/packx2cuadernillo1-e42e3d12f14d7b9fca16739910436047-640-0.png" alt="Imagen 4">
                     <div class="info-producto">
                         <p class="precio">$3000</p>
