--- a/views/ofertas.html
+++ b/views/ofertas.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Balance librería</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/productos.css">
+    <link rel="stylesheet" href="../css/horarios.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
@@ -38,7 +40,7 @@
             <h2 class="text-center">Ofertas</h2>
             <div class="imagen-container">
                 <div class="producto">
-                    <h4>Resaltadores paltel Filgo</h4>
+                    <h4>Resaltadores pastel Filgo</h4>
                     <img src="../img/136773e8e4fe4c575be45a553e99afa34174bbf5925d6ba48c5c3a27827ac21a59836.jpg" alt="Imagen 1">
                     <div class="info-producto">
                         <p class="precio">$500</p>
