--- a/views/Horarios-de-atencion.html
+++ b/views/Horarios-de-atencion.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="container-header">
-        <h1>Balance</h1>
+        <h1><a class="dropdown-item" href="./index.html">Balance</a></h1>
         <nav>
             <ul>
                 <li><a href="./index.html">Inicio</a></li>
