--- a/views/abrochadoras.html
+++ b/views/abrochadoras.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="../css/horarios.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <script src="../js/comprar.js"></script>
 </head>
 <body>
     <header class="container-header">
-        <h1>Balance</h1>
+        <h1><a class="dropdown-item" href="./index.html">Balance</a></h1>
         <nav>
             <ul>
                 <li><a href="./index.html">Inicio</a></li>
@@ -43,24 +44,24 @@
                     <h4>Kangaro HP-10</h4>
                     <img src="../img/Abrochadora/kangaro HP-10 8400.jpg" alt="Imagen 1">
                     <div class="info-producto">
-                        <p class="precio">$8400</p>
-                        <button class="btn-comprar">Comprar</button>
+                        <p class="precio"data-precio="8400">$8400</p>
+                        <button class="btn-comprar" onclick="comprarProducto(this)" data-precio>Comprar</button>
                     </div>
                 </div>
                 <div class="producto">
                     <h4>Kangaro HP-45</h4>
                     <img src="../img/Abrochadora/kangaro HP-45 9000.webp" alt="Imagen 2">
                     <div class="info-producto">
-                        <p class="precio">$9000</p>
-                        <button class="btn-comprar">Comprar</button>
+                        <p class="precio"data-precio="9000">$9000</p>
+                        <button class="btn-comprar" onclick="comprarProducto(this)" data-precio>Comprar</button>
                     </div>
                 </div>
                 <div class="producto">
                     <h4>Maped</h4>
                     <img src="../img/Abrochadora/maped 1400.jpg" alt="Imagen 3">
                     <div class="info-producto">
-                        <p class="precio">$1400</p>
-                        <button class="btn-comprar">Comprar</button>
+                        <p class="precio"data-precio="1400">$1400</p>
+                        <button class="btn-comprar" onclick="comprarProducto(this)" data-precio>Comprar</button>
                     </div>
                 </div>
             </div>
