--- a/views/biblioratosycarpetas.html
+++ b/views/biblioratosycarpetas.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="../css/horarios.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <script src="../js/comprar.js"></script>
 </head>
 <body>
     <header class="container-header">
-        <h1>Balance</h1>
+        <h1><a class="dropdown-item" href="./index.html">Balance</a></h1>
         <nav>
             <ul>
                 <li><a href="./index.html">Inicio</a></li>
@@ -43,40 +44,40 @@
                     <h4>Bibliorato Pvc A4 Lomo angosto The Pel</h4>
                     <img src="../img/Biblioratosycarpetas/D_940527-MLA50318623170_062022-F.jpg" alt="Imagen 1">
                     <div class="info-producto">
-                        <p class="precio">$2500</p>
-                        <button class="btn-comprar">Comprar</button>
+                        <p class="precio" data-precio="2500">$2500</p>
+                        <button class="btn-comprar" onclick="comprarProducto(this)" data-precio>Comprar</button>
                     </div>
                 </div>
                 <div class="producto">
                     <h4>Bibliorato Pvc A4 ancho The Pel</h4>
                     <img src="../img/Biblioratosycarpetas/bibliorato-the-pel-pastel1-53093bcf9f904efd8815987093113042-640-0.jpg" alt="Imagen 2">
                     <div class="info-producto">
-                        <p class="precio">$3000</p>
-                        <button class="btn-comprar">Comprar</button>
+                        <p class="precio" data-precio="3000">$3000</p>
+                        <button class="btn-comprar" onclick="comprarProducto(this)" data-precio>Comprar</button>
                     </div>
                 </div>
                 <div class="producto">
                     <h4>Bibliorato Pvc oficio ancho The Pel</h4>
                     <img src="../img/Biblioratosycarpetas/lomo ancho oficio.jpg" alt="Imagen 3">
                     <div class="info-producto">
-                        <p class="precio">$3500</p>
-                        <button class="btn-comprar">Comprar</button>
+                        <p class="precio" data-precio="3500">$3500</p>
+                        <button class="btn-comprar" onclick="comprarProducto(this)" data-precio>Comprar</button>
                     </div>
                 </div>
                 <div class="producto">
                     <h4>Bibliorato Pvc oficio angosto The Pel</h4>
                     <img src="../img/bibliorato-the-pel-pastel1-53093bcf9f904efd8815987093113042-640-0.jpg" alt="Imagen 4">
                     <div class="info-producto">
-                        <p class="precio">$3000</p>
-                        <button class="btn-comprar">Comprar</button>
+                        <p class="precio"data-precio="3000">$3000</p>
+                        <button class="btn-comprar" onclick="comprarProducto(this)" data-precio>Comprar</button>
                     </div>
                 </div>
                 <div class="producto">
                     <h4>Carpeta de fibra A4</h4>
                     <img src="../img/Biblioratosycarpetas/carpeta de fibra a4.jpg" alt="Imagen 5">
                     <div class="info-producto">
-                        <p class="precio">$1500</p>
-                        <button class="btn-comprar">Comprar</button>
+                        <p class="precio" data-precio="1500">$1500</p>
+                        <button class="btn-comprar" onclick="comprarProducto(this)" data-precio>Comprar</button>
                     </div>
                 </div>
             </div>
