--- a/views/cuadrenillos.html
+++ b/views/cuadrenillos.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="../css/horarios.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <script src="../js/comprar.js"></script>
 </head>
 <body>
     <header class="container-header">
-        <h1>Balance</h1>
+        <h1><a class="dropdown-item" href="./index.html">Balance</a></h1>
         <nav>
             <ul>
                 <li><a href="./index.html">Inicio</a></li>
@@ -43,40 +44,40 @@
                     <h4>ABC rayado</h4>
                     <img src="../img/Cuadrenillos/abc 4650.png" alt="Imagen 1">
                     <div class="info-producto">
-                        <p class="precio">$4650</p>
-                        <button class="btn-comprar">Comprar</button>
+                        <p class="precio" data-precio="4650">$4650</p>
+                        <button class="btn-comprar" onclick="comprarProducto(this)" data-precio>Comprar</button>
                     </div>
                 </div>
                 <div class="producto">
                     <h4>America</h4>
                     <img src="../img/Cuadrenillos/America 900.png" alt="Imagen 2">
                     <div class="info-producto">
-                        <p class="precio">$900</p>
-                        <button class="btn-comprar">Comprar</button>
+                        <p class="precio" data-precio="900">$900</p>
+                        <button class="btn-comprar" onclick="comprarProducto(this)" data-precio>Comprar</button>
                     </div>
                 </div>
                 <div class="producto">
                     <h4>Avon</h4>
                     <img src="../img/Cuadrenillos/avon 800.jpg" alt="Imagen 3">
                     <div class="info-producto">
-                        <p class="precio">$800</p>
-                        <button class="btn-comprar">Comprar</button>
+                        <p class="precio" data-precio="800">$800</p>
+                        <button class="btn-comprar" onclick="comprarProducto(this)" data-precio>Comprar</button>
                     </div>
                 </div>
                 <div class="producto">
                     <h4>Tapa dura</h4>
                     <img src="../img/Cuadrenillos/packx2cuadernillo1-e42e3d12f14d7b9fca16739910436047-640-0.png" alt="Imagen 4">
                     <div class="info-producto">
-                        <p class="precio">$3000</p>
-                        <button class="btn-comprar">Comprar</button>
+                        <p class="precio" data-precio="3000">$3000</p>
+                        <button class="btn-comprar" onclick="comprarProducto(this)" data-precio>Comprar</button>
                     </div>
                 </div>
                 <div class="producto">
                     <h4>Setter</h4>
                     <img src="../img/Cuadrenillos/setter 1400.jpg" alt="Imagen 5">
                     <div class="info-producto">
-                        <p class="precio">$1400</p>
-                        <button class="btn-comprar">Comprar</button>
+                        <p class="precio" data-precio="1400">$1400</p>
+                        <button class="btn-comprar" onclick="comprarProducto(this)" data-precio>Comprar</button>
                     </div>
                 </div>
             </div>
