--- a/views/index.html
+++ b/views/index.html
@@ -12,12 +12,12 @@
     <link rel="stylesheet" href="../css/productos.css">
     <link rel="stylesheet" href="../css/horarios.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <script src="../js/saludo.js"></script>
+    <script src="../js/mayor.js"></script>
     <script src="../js/carousel.js"></script>
 </head>
 <body>
     <header class="container-header">
-        <h1>Balance</h1>
+        <h1><a class="dropdown-item" href="./index.html">Balance</a></h1>
         <nav>
             <ul>
                 <li><a href="./index.html">Inicio</a></li>
