--- a/views/perforadora.html
+++ b/views/perforadora.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="../css/horarios.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <script src="../js/comprar.js"></script>
 </head>
 <body>
     <header class="container-header">
-        <h1>Balance</h1>
+        <h1><a class="dropdown-item" href="./index.html">Balance</a></h1>
         <nav>
             <ul>
                 <li><a href="./index.html">Inicio</a></li>
@@ -43,24 +44,24 @@
                     <h4>Simball soho 10/12 hojas</h4>
                     <img src="../img/Perforadoras/perforadora-simball-soho-10-12-hojas 5800.jpg" alt="Imagen 1">
                     <div class="info-producto">
-                        <p class="precio">$5800</p>
-                        <button class="btn-comprar">Comprar</button>
+                        <p class="precio" data-precio="5800">$5800</p>
+                        <button class="btn-comprar" onclick="comprarProducto(this)" data-precio>Comprar</button>
                     </div>
                 </div>
                 <div class="producto">
                     <h4>Kangaro DP-600</h4>
                     <img src="../img/Perforadoras/perforadora-simball-soho-10-12-hojas 5800.jpg" alt="Imagen 2">
                     <div class="info-producto">
-                        <p class="precio">$6000</p>
-                        <button class="btn-comprar">Comprar</button>
+                        <p class="precio" data-precio="6000">$6000</p>
+                        <button class="btn-comprar" onclick="comprarProducto(this)" data-precio>Comprar</button>
                     </div>
                 </div>
                 <div class="producto">
                     <h4>Kangaro Dp-480</h4>
                     <img src="../img/Perforadoras/dp480.jpg" alt="Imagen 3">
                     <div class="info-producto">
-                        <p class="precio">$3000</p>
-                        <button class="btn-comprar">Comprar</button>
+                        <p class="precio" data-precio="3000">$3000</p>
+                        <button class="btn-comprar" onclick="comprarProducto(this)" data-precio>Comprar</button>
                     </div>
                 </div>
             </div>
