--- a/views/resaltadores.html
+++ b/views/resaltadores.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="../css/horarios.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <script src="../js/comprar.js"></script>
 </head>
 <body>
     <header class="container-header">
-        <h1>Balance</h1>
+        <h1><a class="dropdown-item" href="./index.html">Balance</a></h1>
         <nav>
             <ul>
                 <li><a href="./index.html">Inicio</a></li>
@@ -43,32 +44,32 @@
                     <h4>Faber Castell pastel</h4>
                     <img src="../img/Resaltadores/Faber castell pastel.jpg" alt="Imagen 1">
                     <div class="info-producto">
-                        <p class="precio">$1500</p>
-                        <button class="btn-comprar">Comprar</button>
+                        <p class="precio" data-precio="1500">$1500</p>
+                        <button class="btn-comprar" onclick="comprarProducto(this)" data-precio>Comprar</button>
                     </div>
                 </div>
                 <div class="producto">
                     <h4>Faber Castell</h4>
                     <img src="../img/Resaltadores/Faber Castell.jpg" alt="Imagen 2">
                     <div class="info-producto">
-                        <p class="precio">$1200</p>
-                        <button class="btn-comprar">Comprar</button>
+                        <p class="precio" data-precio="1200">$1200</p>
+                        <button class="btn-comprar" onclick="comprarProducto(this)" data-precio>Comprar</button>
                     </div>
                 </div>
                 <div class="producto">
                     <h4>Filgo</h4>
                     <img src="../img/Resaltadores/Resaltadores-Filgo-Text-Marker-Fluor.jpg" alt="Imagen 3">
                     <div class="info-producto">
-                        <p class="precio">$800</p>
-                        <button class="btn-comprar">Comprar</button>
+                        <p class="precio" data-precio="800">$800</p>
+                        <button class="btn-comprar" onclick="comprarProducto(this)" data-precio>Comprar</button>
                     </div>
                 </div>
                 <div class="producto">
                     <h4>Trabi</h4>
                     <img src="../img/Resaltadores/Trabi.jpg" alt="Imagen 4">
                     <div class="info-producto">
-                        <p class="precio">$900</p>
-                        <button class="btn-comprar">Comprar</button>
+                        <p class="precio" data-precio="900">$900</p>
+                        <button class="btn-comprar" onclick="comprarProducto(this)" data-precio>Comprar</button>
                     </div>
                 </div>
             </div>
