--- a/views/resmas.html
+++ b/views/resmas.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="../css/horarios.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <script src="../js/comprar.js"></script>
 </head>
 <body>
     <header class="container-header">
-        <h1>Balance</h1>
+        <h1><a class="dropdown-item" href="./index.html">Balance</a></h1>
         <nav>
             <ul>
                 <li><a href="./index.html">Inicio</a></li>
@@ -43,32 +44,32 @@
                     <h4>Boreal A4 70 gr</h4>
                     <img src="../img/Resmas/A4 boreal 70 g.webp" alt="Imagen 1">
                     <div class="info-producto">
-                        <p class="precio">$3000</p>
-                        <button class="btn-comprar">Comprar</button>
+                        <p class="precio" data-precio="3000">$3000</p>
+                        <button class="btn-comprar" onclick="comprarProducto(this)" data-precio>Comprar</button>
                     </div>
                 </div>
                 <div class="producto">
                     <h4>Boreal A4 75gr</h4>
                     <img src="../img/Resmas/Boreal A4 75gr x 500 hojas.jpg" alt="Imagen 2">
                     <div class="info-producto">
-                        <p class="precio">$3300</p>
-                        <button class="btn-comprar">Comprar</button>
+                        <p class="precio" data-precio="3300">$3300</p>
+                        <button class="btn-comprar" onclick="comprarProducto(this)" data-precio>Comprar</button>
                     </div>
                 </div>
                 <div class="producto">
                     <h4>Pampa A4 75gr</h4>
                     <img src="../img/Resmas/resma-a4-75gr-pampa.jpg" alt="Imagen 3">
                     <div class="info-producto">
-                        <p class="precio">$3000</p>
-                        <button class="btn-comprar">Comprar</button>
+                        <p class="precio"data-precio="3000">$3000</p>
+                        <button class="btn-comprar" onclick="comprarProducto(this)" data-precio>Comprar</button>
                     </div>
                 </div>
                 <div class="producto">
                     <h4>Boreal oficio 75gr</h4>
                     <img src="../img/Resmas/D_NQ_NP_827106-MLU70119372826_062023-O.webp" alt="Imagen 4">
                     <div class="info-producto">
-                        <p class="precio">$4000</p>
-                        <button class="btn-comprar">Comprar</button>
+                        <p class="precio" data-precio="4000">$4000</p>
+                        <button class="btn-comprar" onclick="comprarProducto(this)" data-precio>Comprar</button>
                     </div>
                 </div>
             </div>
