--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,14 @@
-/* Estilo para las etiquetas h1 */
-.h1{
+h1 {
   font-weight: bold;
 }
-/* Alinear el contenido del encabezado hacia la derecha */
 .container-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  background-color: black;
+  background-color: #001f3f;
   color: white;
 }
-/* Estilos para el enlace del nav */
 .container-header nav ul {
   list-style: none;
   display: flex;
@@ -28,13 +25,13 @@
   transition: color 0.3s ease;
 }
 .dropdown:hover .dropdown-menu {
-  background-color: black;
+  background-color: #001f3f;
 }
 .container-header nav ul li a:hover {
   color: #ffc107;
 }
 section h2 {
-  background-color: black;
+  background-color: #001f3f;
   padding: 10px;
   margin: 0;
   flex-basis: calc(33.33% - 10px);
@@ -42,16 +39,60 @@ section h2 {
   text-align: center;
   color: white;
 }
-footer{
+.imagen1 {
+  height: 300px;
+  width: 700px;
+}
+.descarga-pdf {
+  text-align: center;
+  margin: 20px 0;
+}
+.descarga-pdf h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+.descarga-pdf a {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #007BFF;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 5px;
+  font-size: 18px;
+  transition: background-color 0.3s ease;
+}
+.descarga-pdf a:hover {
+  background-color: #0056b3;
+}
+footer {
   display: flex;
   flex-shrink: 0;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background-color: #001f3f;
+  color: white;
+  margin-top: 5%;
+}
+.container-footer {
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: black;
+  text-align: center;
+}
+.social-icons {
+  display: flex;
+  gap: 10px;
+}
+.social-icon {
+  font-size: 24px;
   color: white;
-  padding: 10px 0;
-  margin-top: 7%;
+  text-decoration: none;
+  transition: color 0.3s ease-in-out;
+}
+.social-icon:hover {
+  color: #007bff;
 }
 @media (max-width: 320px) {
   .container-header nav ul {
@@ -63,6 +104,10 @@ footer{
   }
   .container-header {
     padding: 5px 10px;
+  }
+  .imagen1 {
+    height: 100px;
+    width: 200px;
   }
 }
 @media (min-width: 321px) and (max-width: 768px) {
@@ -82,5 +127,9 @@ footer{
   }
   footer {
     margin-top: 5%;
+  }
+  .imagen1 {
+    height: 150px;
+    width: 350px;
   }
 }
