--- a/views/Quienessomos.html
+++ b/views/Quienessomos.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Balance librería</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/productos.css">
-    <link rel="stylesheet" href="../css/horarios.css">
+    <link rel="stylesheet" href="../css/quienessomos.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/comprar.js"></script>
+    <title>Balance - Historia de una tienda</title>
 </head>
 <body>
     <header class="container-header">
@@ -39,37 +40,23 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <section class="productos">
-            <h2 class="text-center">Ofertas</h2>
-            <div class="imagen-container">
-                <div class="producto">
-                    <h4>Kangaro HP-10</h4>
-                    <img src="../img/Abrochadora/kangaro HP-10 8400.jpg" alt="Imagen 1">
-                    <div class="info-producto">
-                        <p class="precio"data-precio="8400">$8400</p>
-                        <button class="btn-comprar" onclick="comprarProducto(this)" data-precio>Comprar</button>
-                    </div>
-                </div>
-                <div class="producto">
-                    <h4>Kangaro HP-45</h4>
-                    <img src="../img/Abrochadora/kangaro HP-45 9000.webp" alt="Imagen 2">
-                    <div class="info-producto">
-                        <p class="precio"data-precio="9000">$9000</p>
-                        <button class="btn-comprar" onclick="comprarProducto(this)" data-precio>Comprar</button>
-                    </div>
-                </div>
-                <div class="producto">
-                    <h4>Maped</h4>
-                    <img src="../img/Abrochadora/maped 1400.jpg" alt="Imagen 3">
-                    <div class="info-producto">
-                        <p class="precio"data-precio="1400">$1400</p>
-                        <button class="btn-comprar" onclick="comprarProducto(this)" data-precio>Comprar</button>
-                    </div>
-                </div>
+    <div class="container">
+        <h2 class="text-center">Nuestra Historia</h2>
+        <p>Hace muchos años, en el centro de San Nicolás de los Arroyos, Argentina, nació una pequeña tienda de artículos de papelería llamada "Balance". Este lugar se convirtió en un rincón especial para estudiantes, artistas y oficinistas que buscaban los mejores suministros de papelería para dar rienda suelta a su creatividad.</p>
+        <div class="image-container">
+            <div class="image">
+                <img src="../img/Don Bruno.jpg" alt="Imagen 3">
             </div>
-        </section>
-    </main>
+            <div class="image">
+                <img src="../img/Don Agustin.jpeg" alt="Imagen 2">
+            </div>
+        </div>
+        <p>Los fundadores de la tienda, Don Bruno y Don Agustín, tenían una pasión por la papelería desde su juventud. Decidieron abrir "Balance" para compartir su amor por los útiles escolares, las carpetas de colores y los bolígrafos de calidad con la comunidad.</p>
+        <div class="video-container">
+            <iframe width="560" height="315" src="../y2mate.com - Comercial Cuaderno Rivadavia_720p.mp4" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <p>Con el tiempo, "Balance" se convirtió en un lugar emblemático de la ciudad. Los clientes no solo venían a comprar suministros, sino también a inspirarse y conectarse con otros amantes de la papelería.</p>
+    </div>
     <footer class="container-footer text-center py-3">
         <div class="social-icons">
             <a href="https://www.facebook.com" class="social-icon"><i class="fab fa-facebook"></i></a>
