--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="../css/productos.css">
     <link rel="stylesheet" href="../css/horarios.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/mayor.js"></script>
     <script src="../js/carousel.js"></script>
 </head>
@@ -23,6 +25,7 @@
                 <li><a href="./index.html">Inicio</a></li>
                 <li><a href="./contacto.html">Contacto</a></li>
                 <li><a href="./Horarios-de-atencion.html">Horarios de atención</a></li>
+                <li><a href="./Quienessomos.html"> ¿Quienes somos?</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" id="productosDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Productos
@@ -47,10 +50,10 @@
                     <div id="myCarousel" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="../img/BalanceLibreria.jpeg" alt="Imagen 1" class="d-block w-100">
+                                <img src="../img/BalanceLibreria.jpeg" alt="Imagen 1" class="imagen1">
                             </div>
                             <div class="carousel-item">
-                                <img src="../img/Lapiceras.webp" alt="Imagen 2" class="d-block w-100">
+                                <img src="../img/Lapiceras.webp" alt="Imagen 2" class="imagen1">
                             </div>
                         </div>
                     </div>
@@ -72,20 +75,29 @@
                 <h2 class="text-center mt-4">Ubicación</h2>
                 <h3 class="text-center">Nos encontramos en:</h3>
                 <p class="text-center">Mendoza 2031</p>
-                <p class="text-center">Rosario, Santa Fe.</p>
+                <p class="text-center">San Nicolás de los arroyos, Buenos Aires.</p>
                 <h2 class="text-center mt-4">Contacto</h2>
-                <p class="text-center">Teléfono: (341) 456-7890</p>
+                <p class="text-center">Teléfono: (336) 456-7890</p>
                 <p class="text-center">Correo electrónico: balancenegocio@gmail.com</p>
                 <h2 class="text-center mt-4">Medios de pagos</h2>
                 <p class="text-center">Tarjetas</p>
                 <p class="text-center">Efectivo</p>
                 <p class="text-center">Mercado pago</p>
+                <section class="descarga-pdf">
+                    <h2 class="text-center mt-4">Descarga nuestro Catálogo</h2>
+                    <a href="../libreria.pdf" download>Descargar Catálogo (PDF)</a>
+                </section>
             </div>
         </section>
     </main>
     <footer class="container-footer text-center py-3">
+        <div class="social-icons">
+            <a href="https://www.facebook.com" class="social-icon"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com/" class="social-icon"><i class="fab fa-instagram"></i></a>
+            <a href="mailto:correo@gmail" class="social-icon"><i class="far fa-envelope"></i></a>
+            <a href="https://wa.me/tunumerodetelefono" class="social-icon"><i class="fab fa-whatsapp"></i></a>
+        </div>
         <p>&copy; BalanceLibreria. Todos los derechos reservados.</p>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
