--- a/views/ofertas.html
+++ b/views/ofertas.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="../css/horarios.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/comprar.js"></script>
 </head>
 <body>
@@ -19,6 +21,7 @@
                 <li><a href="./index.html">Inicio</a></li>
                 <li><a href="./contacto.html">Contacto</a></li>
                 <li><a href="./Horarios-de-atencion.html">Horarios de atención</a></li>
+                <li><a href="./Quienessomos.html"> ¿Quienes somos?</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" id="productosDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Productos
@@ -117,8 +120,13 @@
         </section>
     </main>
     <footer class="container-footer text-center py-3">
+        <div class="social-icons">
+            <a href="https://www.facebook.com" class="social-icon"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com/" class="social-icon"><i class="fab fa-instagram"></i></a>
+            <a href="mailto:correo@gmail" class="social-icon"><i class="far fa-envelope"></i></a>
+            <a href="https://wa.me/tunumerodetelefono" class="social-icon"><i class="fab fa-whatsapp"></i></a>
+        </div>
         <p>&copy; BalanceLibreria. Todos los derechos reservados.</p>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
